--- a/resources/css/frontend/components/form.css
+++ b/resources/css/frontend/components/form.css
@@ -84,7 +84,7 @@
 
 /* Element specific styles */
 textarea.form-input {
-    @apply h-32 py-2;
+    @apply h-32 py-2 resize-none;
     line-height: 24px;
     min-height: 2.75rem; /* Height of h-11, base height of input */
 }
